# aphrodite

./: .gitignore  CONTRIBUTING.md  GOAL.md  LICENSE  NO_CORE_POLICY.md  PROGRESS.md  README.md  ROADMAP.md  SECURITY.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
aphrodite/: __init__.py  app.py  cli.py  config.py  doctor.py  inventory.py  mcp_server.py  paths.py  preflight.py  readiness.py  render.py  router.py  scaffold.py  serve.py
aphrodite/discord/: __init__.py  component_guidance.py  intake.py  signature.py
aphrodite/modules/: __init__.py  acp_relay.py  image_gen.py  skillopt.py
caddy/: aphrodite.caddy.example
config/: aphrodite.env.example
docs/: acp-relay.md  configuration.md  deployment.md  discord-interactions.md  live-service-staleness.md  module-adapters.md  private-overlay.md  production-endpoint-preflight.md  service-runtime-observability.md  signed-interaction-negative-fixtures.md
examples/hello_adapter/: README.md  hello_adapter.py  pyproject.toml
scripts/: aphrodite  mcp_smoke.py  verify.sh
systemd/: aphrodite.service.example
tests/: test_acp_relay_module.py  test_adapter_discovery.py  test_adapter_lifespan.py  test_adapter_route_seam.py  test_adapter_spec.py  test_adapter_surfacing.py  test_cli.py  test_config_modules.py  test_deployment_readiness.py  test_diagnostics_remediation.py  test_discord_intake.py  test_discord_signature.py  test_dispatch_honesty.py  test_example_adapter.py  test_image_gen_module.py  test_interaction_cutover_dry_run.py  test_mcp_server.py  test_module_actions.py  test_paths.py  test_production_endpoint_preflight.py  test_readiness.py  test_scaffold.py  test_scaffold_module.py  test_security_model.py  test_signed_interaction_fixtures.py  test_signed_interaction_negative_fixtures.py  test_skillopt_module.py  test_staleness_date.py
tests/fixtures/: fake_skillopt_train.py
