[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aphrodite-sidecar"
version = "0.1.0"
description = "Reusable Hermes plugin sidecar and FastAPI Discord-interaction dispatch backend."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Aphrodite contributors"}]
dependencies = [
    "fastapi>=0.110",
    "pynacl>=1.5",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
# Confirm the acp distribution name on PyPI; aphrodite/modules/acp_relay.py imports it lazily so the package works without it.
acp = ["acp"]
dev = ["pytest>=8", "httpx>=0.27"]

[project.scripts]
aphrodite = "aphrodite.cli:main"

[tool.setuptools.packages.find]
include = ["aphrodite*"]
