[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aphrodite-sidecar"
dynamic = ["version"]
description = "Reusable Hermes plugin sidecar and FastAPI Discord-interaction dispatch backend."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Aphrodite contributors"}]
dependencies = [
    "fastapi>=0.110",
    "pynacl>=1.5",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
acp = ["agent-client-protocol>=0.10,<1"]
dev = ["pytest>=8", "httpx>=0.27"]

[project.scripts]
aphrodite = "aphrodite.cli:main"

[project.entry-points."aphrodite.adapters"]
image_gen = "aphrodite.modules.image_gen:handle"
skillopt = "aphrodite.modules.skillopt"
acp_relay = "aphrodite.modules.acp_relay:handle"

[tool.setuptools.dynamic]
version = {attr = "aphrodite.__version__"}

[tool.setuptools.packages.find]
include = ["aphrodite*"]
