[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aphrodite-hello-adapter"
version = "0.1.0"
description = "Aphrodite module adapter: hello."
requires-python = ">=3.10"
dependencies = []

[project.entry-points."aphrodite.adapters"]
hello = "hello_adapter:handle"

[tool.setuptools]
py-modules = ["hello_adapter"]
